commit just in case I need to revert later

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="google-site-verification" content="bpiyVTV3hZYIC9YLe6M1YN2So6ssaHhLmJXSaV8TI1A" />
+      <meta property="og:image" content="willdoescode.jpeg">
+      <meta property="og:title" content="Will Does Tech">
+      <meta property="twitter:card" content="summary">
+      <meta name="twitter:title" content="Will Does Tech">
+      <meta name="twitter:description" content="A portfolio site for the coolest kid in town">
+      <meta name="twitter:image" content="willdoescode.jpeg">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Home - Will Does Tech</title>
   </head>
   <body>
     <noscript>
