fixed some styling but I still cant get the navbar to fold correclty

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,13 @@
       <meta name="twitter:description" content="A portfolio site for the coolest kid in town">
       <meta name="twitter:image" content="willdoescode.jpeg">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="static/img/favicon.ico">
     <title>Home - Will Does Tech</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Imagine not having js enabled in 2020 lmao</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
