--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <meta name="twitter:description" content="A portfolio site for the coolest kid in town">
       <meta name="twitter:image" content="willdoescode.jpeg">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="static/img/favicon.ico">
+      <link rel="icon" href="<%= BASE_URL %>favicon-xyz.png">
     <title>Home - Will Does Tech</title>
   </head>
   <body>
